remove SystemLambda