@@ -70,7 +70,7 @@
         <checkstyle.version>3.6.0</checkstyle.version>
         <commonmark.version>0.28.0</commonmark.version>
         <doxia.version>2.1.0</doxia.version>
-        <fasterxml.version>2.21.2</fasterxml.version>
+        <fasterxml.version>2.21.3</fasterxml.version>
         <maven.compiler.version>3.15.0</maven.compiler.version>
         <maven.dependency.version>3.10.0</maven.dependency.version>
         <maven.javadoc.version>3.12.0</maven.javadoc.version>
@@ -182,7 +182,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.21.0</version>
+            <version>2.22.0</version>
             <scope>compile</scope>
         </dependency>
 
@@ -337,28 +337,6 @@
         </dependency> -->
 
         <!-- =============================================================== -->
-        <!-- System Lambda: A collection of functions for testing code which -->
-        <!-- uses java.lang.System.                                          -->
-        <!-- https://github.com/stefanbirkner/system-lambda                  -->
-        <!-- =============================================================== -->
-
-        <!-- https://mvnrepository.com/artifact/com.github.stefanbirkner/system-lambda -->
-        <dependency>
-            <groupId>com.github.stefanbirkner</groupId>
-            <artifactId>system-lambda</artifactId>
-            <version>1.2.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Source: https://mvnrepository.com/artifact/com.ginsberg/junit5-system-exit -->
-        <dependency>
-            <groupId>com.ginsberg</groupId>
-            <artifactId>junit5-system-exit</artifactId>
-            <version>2.0.2</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- =============================================================== -->
         <!-- Error Prone dependency                                          -->
         <!-- =============================================================== -->
 
@@ -456,7 +434,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.version}</version>
                     <configuration>
-                        <argLine>-ea -Xms8192m -Xmx8192m -XX:+UseG1GC -verbose:gc -XX:+HeapDumpOnOutOfMemoryError -XX:StartFlightRecording:filename=recording.jfr,dumponexit=true,settings=default.jfc -Djava.security.manager=allow</argLine>
+                        <argLine>-ea -Xms8192m -Xmx8192m -XX:+UseG1GC -verbose:gc -XX:+HeapDumpOnOutOfMemoryError -XX:StartFlightRecording:filename=recording.jfr,dumponexit=true,settings=default.jfc</argLine>
                         <parallel>all</parallel>
                         <perCoreThreadCount>true</perCoreThreadCount>
                         <useUnlimitedThreads>true</useUnlimitedThreads>
@@ -956,7 +934,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>13.4.0</version>
+                        <version>13.4.2</version>
                         <scope>compile</scope>
                     </dependency>
                 </dependencies>
@@ -1168,7 +1146,6 @@
                     <execution>
                         <goals>
                             <goal>analyze-report</goal>
-                            <goal>properties</goal>
                         </goals>
                         <phase>site</phase>
                     </execution>
